Bug 834343 - [Windows] reset the idle time of the user idle service for mouse move events only if the mouse moved by at least 1 pixel, r=cmartin.

Differential Revision: https://phabricator.services.mozilla.com/D170904